# mctde-Installer

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md  app.manifest  build.bat  build_gui.bat  build_preview.bat  gui.manifest  gui.rc  gui_preview.rc
data/: c4110.chrtpfbhd  dvdbnd_namelist.txt
src/: Bhd5.cpp  Bhd5.h  BinaryReader.h  Bnd3.cpp  Bnd3.h  C4110Header.cpp  C4110Header.h  Dcx.cpp  Dcx.h  Detect.cpp  Detect.h  DisplayConfig.cpp  DisplayConfig.h  Download.cpp  Download.h  ExePatch.cpp  ExePatch.h  ExePatchTable.cpp  Extract.cpp  Extract.h  Gui.cpp  Installer.cpp  Installer.h  NameHash.cpp  NameHash.h  NamelistData.cpp  Sha256.cpp  Sha256.h  Unpacker.cpp  Unpacker.h  Update.cpp  Update.h  VanillaManifest.cpp  VanillaManifest.h  gui_resource.h  main.cpp
testdata/: README.md
